--- a/index.html
+++ b/index.html
@@ -4,12 +4,21 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>blob evolution</title>
-    <style> body {padding: 0; margin: 0;} </style>
-    <script src="p5.js"></script>
-    <script src="p5.sound.js"></script>
+    <style> body {padding: 0; margin: 0;}
+           #myChart{
+             position: absolute;
+             left: 510px;
+           }
+           
+     </style>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.js"></script>
+    <script src="libraries/p5.js"></script>
+    <!-- <script src="p5.sound.js"></script> -->
     <script src="sketch.js"></script>
     <script src="blob.js"></script>
   </head>
   <body>
+    <canvas id="myChart" width="1000" height="700"></canvas>
+    <script src="chart.js"></script>
   </body>
 </html>
